--- a/style.css
+++ b/style.css
@@ -1,18 +1,26 @@
-body {background-color: rgb(53, 47, 107);
+body {background-color: rgb(18, 11, 77);
 }
 h1 {text-align: center;
     font-size: 250%;
-     color:rgb(139, 0, 0);}
-#ha {width: 28%;
+     color:rgb(111, 101, 202);}
+#ny {width: 28%;
     margin-left: 34%;
     
     
 }
     
-#ny {width: 30%;
-    margin-left: 33%;
+#ha {width: 22%;
+    margin-left: 37%;
     
 }
+h3 {font-size: 200%;
+    color:rgb(17, 0, 255);
+}
+#es {width: 50%;
+    margin-left: 22%;
+    
+}
+
 h3 {font-size: 200%;
     color:rgb(17, 0, 255);
 }
