--- a/style.css
+++ b/style.css
@@ -24,3 +24,6 @@ h3 {font-size: 200%;
 h3 {font-size: 200%;
     color:rgb(17, 0, 255);
 }
+h2 {text-align: center;
+    font-size: 250%;
+     color:rgb(238, 238, 238);}
