--- a/style.css
+++ b/style.css
@@ -27,3 +27,7 @@ h3 {font-size: 200%;
 h2 {text-align: center;
     font-size: 250%;
      color:rgb(238, 238, 238);}
+     
+#ar {width: 22%;
+    margin-left: 37%;
+}
