--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ h3 {font-size: 200%;
 }
 h2 {text-align: center;
     font-size: 250%;
-     color:rgb(238, 238, 238);}
-     
+     color:rgb(238, 238, 238);}   
+    
+#te {width: 22%;
+    margin-left: 37%;
 }
